--- a/bands.html
+++ b/bands.html
@@ -25,7 +25,7 @@
 
   <section>
 
-    <div class="container-fluid dark">
+    <div class="container-fluid dark top">
       <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
 
         <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
@@ -136,7 +136,20 @@
   </div>
 
 
+  <footer class="dark" id="bottom-container">
 
+
+    <div class="container-fluid">
+
+      <a class="social-link" href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
+      <a class="social-link" href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
+      <a class="social-link" href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
+      <a class="social-link" href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
+      <p class="copyriht">© 2020 Tres Incendios Records</p>
+
+    </div>
+
+  </footer>
 
 
 
