--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <!-- CONTAINER 1 -->
 
-  <section class="dark">
+  <section>
 
-    <div class="container-fluid">
+    <div class="dark container-fluid top">
 
       <nav class="navbar navbar-expand-lg navbar-light">
 
@@ -105,20 +105,28 @@
 
     <div class="row">
 
+
+
       <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
+
           <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
 
           <div class="text-no-wrap">
             <span class="artist-release">SECRETISMO</span>
             <h4 class="product-name">Ausencia</h4>
           </div>
+
+
         </a>
       </div>
 
 
       <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
+
+
+
           <img class="lanzamientos img-thumbnail" src="images/everything lost.jpg" alt="EL" />
 
           <div class="text-no-wrap">
@@ -130,8 +138,10 @@
 
       <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
-          <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
 
+
+
+          <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
           <div class="text-no-wrap">
             <span class="artist-release">TRIVMVIRS</span>
             <h4 class="product-name">Singles Vol. 1</h4>
@@ -198,7 +208,10 @@
 
     </div>
 
-    <a href="releases.html"> More... </a>
+    <button type="button" class="  btn-light btn btn-sm"> <a href="releases.html">
+        <h4> ALL <i class="fas fa-record-vinyl"></i> </h4>
+      </a></button>
+
   </section>
 
   <section class="lighter" id="nosotros">
@@ -248,7 +261,6 @@
     </div>
 
   </footer>
-
 
 
 
