--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
 
   <section>
 
-    <div class="container-fluid dark">
+    <div class="container-fluid dark top">
       <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
 
         <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
@@ -74,6 +74,20 @@
 
   </section>
 
+  <footer class="dark" id="bottom-container">
+
+
+    <div class="container-fluid">
+
+      <a class="social-link" href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
+      <a class="social-link" href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
+      <a class="social-link" href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
+      <a class="social-link" href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
+      <p class="copyriht">© 2020 Tres Incendios Records</p>
+
+    </div>
+
+  </footer>
 
 
 
@@ -86,7 +100,6 @@
 
 
 
-  
 
   <!-- BOOTSTRAP JAVASCRIPT -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
