--- a/releases.html
+++ b/releases.html
@@ -19,7 +19,7 @@
 <body>
   <section>
 
-    <div class="container-fluid dark">
+    <div class="container-fluid dark top">
       <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
 
         <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
@@ -85,8 +85,7 @@
 
     <div class="row">
 
-      <div class="text-no-wrap">
-      </div>
+
 
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
@@ -237,6 +236,20 @@
 
   </section>
 
+  <footer class="dark" id="bottom-container">
+
+
+    <div class="container-fluid">
+
+      <a class="social-link" href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
+      <a class="social-link" href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
+      <a class="social-link" href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
+      <a class="social-link" href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
+      <p class="copyriht">© 2020 Tres Incendios Records</p>
+
+    </div>
+
+  </footer>
 
 
 
@@ -248,7 +261,6 @@
 
 
 
-  
 
   <!-- BOOTSTRAP JAVASCRIPT -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
