thumbnail 100%, bigger padding

--- a/bands.html
+++ b/bands.html
@@ -63,7 +63,7 @@
 
       <h3><strong>Audiocancer</strong></h3>
       <p>
-        "We are a collective of individuals whom pursue the perpetual life-death cycle through the destruction of sound, thus creating new ones. For every time our free will chooses to wander that cycle; we learn and grow. The sonic works we spawn
+        "We are a collective of individuals whom pursue the perpetual life-death cycle through the destruction of sound, thus creating new ones. Every time our free will chooses to wander that cycle, we learn and grow. The sonic works we spawn
         are an exercise of that free will, and a manifestation of the lust and pain we endure in this life."
       </p>
 
@@ -84,7 +84,7 @@
       <img class="artist" src="images/DIMITRI.png" alt="">
       <h3> <strong>Dimitri Novikov</strong></h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+        Dimitri lives somewhere in the world. Walks in search of noise that is useful, important.
       </p>
     </div>
 
