--- a/releases.html
+++ b/releases.html
@@ -88,7 +88,7 @@
 
 
 
-      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image LP text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
 
@@ -99,7 +99,7 @@
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image LP text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
           <img class="lanzamientos img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
 
@@ -110,7 +110,7 @@
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image LP text-rel col-lg-3 col-sm-4 col-xs-6">
 
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
           <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
@@ -131,7 +131,7 @@
 
     <div class="row">
 
-      <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class=" image EP text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
           <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
 
@@ -142,7 +142,7 @@
         </a>
       </div>
 
-      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image EP text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
           <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
 
@@ -154,7 +154,7 @@
       </div>
 
 
-      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image EP text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/THALASSIC.jpg" alt="THLSC" />
 
@@ -166,7 +166,7 @@
       </div>
 
 
-      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image EP text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/celeste-altamar">
           <img class="lanzamientos img-thumbnail" src="images/CELESTE.jpg" alt="C/A" />
 
@@ -184,7 +184,7 @@
     <div class="row">
 
 
-      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class=" image SINGLE text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
           <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
 
@@ -195,7 +195,7 @@
         </a>
       </div>
 
-      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class=" image SINGLE text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
           <img class="lanzamientos img-thumbnail" src="images/everything lost.jpg" alt="EL" />
 
@@ -207,7 +207,7 @@
       </div>
 
 
-      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image SINGLE text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
           <img class="lanzamientos img-thumbnail" src="images/AGAIN.jpg" alt="OTRVZ" />
 
@@ -220,7 +220,7 @@
 
 
 
-      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+      <div class="image SINGLE text-rel col-lg-3 col-sm-4 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
           <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
 
