--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
 
-      <div class=" image SINGLE col-lg-3 col-sm-4 col-xs-6">
+      <div class=" image SINGLE col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
 
           <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
@@ -124,7 +124,7 @@
       </div>
 
 
-      <div class=" image SINGLE  col-lg-3 col-sm-4 col-xs-6">
+      <div class=" image SINGLE  col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
 
 
@@ -138,7 +138,7 @@
         </a>
       </div>
 
-      <div class=" image EP  col-lg-3 col-sm-4 col-xs-6">
+      <div class=" image EP  col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
 
 
@@ -151,7 +151,7 @@
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-sm-4 col-xs-6">
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
 
@@ -162,7 +162,7 @@
         </a>
       </div>
 
-      <div class="image EP text-rel col-lg-3 col-sm-4 col-xs-6">
+      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
 
           <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
@@ -174,7 +174,7 @@
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-sm-4 col-xs-6">
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
           <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
 
@@ -185,7 +185,7 @@
         </a>
       </div>
 
-      <div class="image EP text-rel col-lg-3 col-sm-4 col-xs-6">
+      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/THALASSIC.jpg" alt="THLSC" />
           <div class="text-no-wrap">
@@ -196,7 +196,7 @@
         </a>
       </div>
 
-      <div class="image SINGLE text-rel col-lg-3 col-sm-4 col-xs-6">
+      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
           <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
 
