--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
 
         <div class=" container row" id="cabeza">
-          <div class="description col-lg-6 col-md-12">
+          <div class="description col-xl-6 col-lg-12">
             <h1 class="big-heading">Producción y difusión de bandas alternativas emergentes.</h1>
             <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
           </div>
 
-          <div class=" cont-fos col-lg-6 col-md-12">
+          <div class=" cont-fos col-xl-6 col-lg-12">
             <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
           </div>
 
@@ -109,7 +109,7 @@
 
 
 
-      <div class=" image SINGLE col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class=" image SINGLE col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
 
           <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
@@ -122,9 +122,9 @@
 
         </a>
       </div>
+      <!-- col-lg-3 col-md-4 col-sm-6 col-xs-6 -->
 
-
-      <div class=" image SINGLE  col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class=" image SINGLE  col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
 
 
@@ -138,7 +138,7 @@
         </a>
       </div>
 
-      <div class=" image EP  col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class=" image EP  col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
 
 
@@ -151,7 +151,7 @@
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class="image LP text-rel col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
 
@@ -162,7 +162,7 @@
         </a>
       </div>
 
-      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class="image EP text-rel col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
 
           <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
@@ -174,7 +174,7 @@
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class="image LP text-rel col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
           <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
 
@@ -185,7 +185,7 @@
         </a>
       </div>
 
-      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class="image EP text-rel col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/THALASSIC.jpg" alt="THLSC" />
           <div class="text-no-wrap">
@@ -196,7 +196,7 @@
         </a>
       </div>
 
-      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6 col-xs-6">
+      <div class="image SINGLE text-rel col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
           <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
 
@@ -207,12 +207,18 @@
 
         </a>
       </div>
+      <br>
+
+
+
 
     </div>
 
-    <button type="button" class="  btn-light btn btn-sm"> <a href="releases.html">
-        <h4> ALL <i class="fas fa-record-vinyl"></i> </h4>
-      </a></button>
+    <p class="release-btn">
+      <button type="button" class="btn-light btn btn-sm"> <a href="releases.html">
+          <h4> ALL <i class="fas fa-record-vinyl"></i> </h4>
+        </a></button>
+    </p>
 
   </section>
 
