--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class=" container row" id="cabeza">
           <div class="description col-xl-6 col-lg-12">
-            <h1 class="big-heading">Producción y difusión de bandas alternativas emergentes.</h1>
+            <h1 class="big-heading">Producción y difusión de bandas alternativas.</h1>
             <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
           </div>
 
