stylized navbar and size on mobile

--- a/bands.html
+++ b/bands.html
@@ -23,39 +23,42 @@
 
 <body>
 
-  <section>
+    <nav class="navbar sticky-top navbar-expand-xl navbar-light">
 
-    <div class="container-fluid dark top">
-      <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+      <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="releases.html">Lanzamientos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="bands.html">Bandas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Arte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Letras</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Reseñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#nosotros">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="info.html">Conectemos</a>
+          </li>
 
-        <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        </ul>
+      </div>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="releases.html">Lanzamientos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="bands.html">Bandas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html#nosotros">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="info.html">Conectemos</a>
-            </li>
-          </ul>
-        </div>
+    </nav>
 
-      </nav>
-    </div>
-
-  </section>
-
-  <div id="artistas-bandas">
+  <div class="lighter" id="artistas-bandas">
 
     <div>
 
