--- a/info.html
+++ b/info.html
@@ -21,35 +21,41 @@
 
 <body>
 
-  <section>
 
-    <div class="container-fluid dark top">
-      <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+  <nav class="navbar sticky-top navbar-expand-xl navbar-light">
 
-        <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="releases.html">Lanzamientos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="bands.html">Bandas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Arte</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Letras</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Reseñas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html#nosotros">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="info.html">Conectemos</a>
+        </li>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="releases.html">Lanzamientos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="bands.html">Bandas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html#nosotros">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="info.html">Conectemos</a>
-            </li>
-          </ul>
-        </div>
-
-      </nav>
+      </ul>
     </div>
+
+  </nav>
 
   </section>
 
@@ -88,9 +94,6 @@
     </div>
 
   </footer>
-
-
-
 
 
 
