--- a/index.html
+++ b/index.html
@@ -23,39 +23,44 @@
 
 <body>
   <!-- CONTAINER 1 -->
+  <nav class="navbar sticky-top navbar-expand-xl navbar-light">
 
-  <section>
+    <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="releases.html">Lanzamientos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="bands.html">Bandas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Arte</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Letras</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Reseñas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#nosotros">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Conectemos</a>
+        </li>
 
-    <div class="dark container-fluid top">
+      </ul>
+    </div>
 
-      <nav class="navbar navbar-expand-lg navbar-light">
+  </nav>
 
-        <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <section class="dark">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="releases.html">Lanzamientos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="bands.html">Bandas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#nosotros">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact-me">Conectemos</a>
-            </li>
-          </ul>
-        </div>
-
-      </nav>
-      <!-- TÍTULO -->
-      <div>
-
+    <div class="container-fluid top">
 
         <div class=" container row" id="cabeza">
           <div class="description col-xl-6 col-lg-12">
@@ -215,7 +220,7 @@
     </div>
 
     <p class="release-btn">
-      <button type="button" class="btn-light btn btn-sm"> <a href="releases.html">
+      <button type="button" class="btn-light btn btn-lg"> <a href="releases.html">
           <h4> ALL <i class="fas fa-record-vinyl"></i> </h4>
         </a></button>
     </p>
@@ -249,7 +254,7 @@
 
   <section class="light" id="contact-me">
     <div class="container-fluid">
-      <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
+      <button type="button" class=" btn-outline-dark btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
     </div>
   </section>
 
