--- a/index.html
+++ b/index.html
@@ -58,24 +58,23 @@
 
   </nav>
 
-  <section class="dark">
 
-    <div class="container-fluid top">
 
-        <div class=" container row" id="cabeza">
-          <div class="description col-xl-6 col-lg-12">
-            <h1 class="big-heading">Producción y difusión de bandas alternativas.</h1>
-            <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
-          </div>
+  <div class="container-fluid top dark">
 
-          <div class=" cont-fos col-xl-6 col-lg-12">
-            <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
-          </div>
-
-        </div>
+    <div class="row" id="cabeza">
+      <div class="description col-xl-6 col-lg-12">
+        <h1 class="big-heading">Producción y difusión de bandas alternativas.</h1>
+        <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
       </div>
+
+      <div class=" cont-fos col-xl-6 col-lg-12">
+        <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
+      </div>
+
     </div>
-  </section>
+  </div>
+  </div>
 
   <!-- LANZAMIENTOS -->
   <section class="light" id="releases">
@@ -212,18 +211,17 @@
 
         </a>
       </div>
-      <br>
 
 
 
 
     </div>
 
-    <p class="release-btn">
+    <div class="release-btn">
       <button type="button" class="btn-light btn btn-lg"> <a href="releases.html">
           <h4> ALL <i class="fas fa-record-vinyl"></i> </h4>
         </a></button>
-    </p>
+    </div>
 
   </section>
 
